--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
+    "@types/dotenv": "^8.2.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
